--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  width: 100%;
+  max-width: 100px;
+  background: rgba(229, 52, 17, 1);
+  border: none;
+  outline: none;
   text-align: center;
+  padding: 10px;
+  color: #fff;
+  border-radius: 100px;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
+  width: 100%;
+  height: 100vh;
+  background: rgb(34, 19, 51);
+  color: rgba(229, 52, 17, 1);
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form input {
+  width: 100%;
+  max-width: 200px;
+  outline: none;
+  color: rgb(126, 126, 126);
+  padding: 0px 0px 8px;
+  background: none;
+  border: none;
+  border-bottom: 1px solid;
+}
+
+.form label {
+  margin: 20px 0 10px;
+}
+
+.players {
+  width: 100%;
+  max-width: 350px;
+  padding: 20px;
+  background: #333333;
+  color: #fff;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.players__one {
+  width: 100%;
+  border: 1px solid #fff;
+  margin-right: 20px;
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.players__two {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #fff;
+}
+
+.players__name {
+  color: rgba(229, 52, 17, 1);
+}
+
+.hand {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.hand__handle {
+  margin-bottom: 10px;
+}
+
+.hand li {
+  display: flex;
+  flex-direction: column;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 400px) {
+  .players {
+    padding: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  .players__one {
+    margin-right: 10px;
   }
 }
